<resources>
    <string name="korean_app_name">악보와 함께</string>

    <!-- 홈화면 메뉴 -->
    <string name="score_storage">악보 보관함</string>
    <string name="load_score">악보 불러오기</string>
    <string name="tutorial">튜토리얼</string>
    <string name="setting">설정</string>

    <string name="select_from_gallery">악보 불러오기</string>

    <string name="load_score_step_1">첫 번째 단계!</string>
    <string name="load_score_step_1_content">연주할 악보를 불러오세요!</string>
    <string name="load_score_button">+</string>
    <string name="load_score_edit_button">편집</string>
    <string name="load_score_finish_edit_button">편집 완료</string>
    <string name="load_score_edit_toast_message">편집을 시작합니다.\n순서를 바꾸려면 악보를 길게 클릭해주세요!</string>
    <string name="load_score_next_step">다음</string>
    <string name="complete">완료</string>
    <string name="load_score_detail_view">%d 번째 악보</string>
    <string name="load_score_duplicate">이미 불러온 악보는 다시 불러올 수 없어요!</string>

    <string name="load_score_step_2">두 번째 단계!</string>
    <string name="load_score_step_2_content">악보를 가이드에 맞추어 잘라주세요!</string>
    <string name="crop_score_info">%1$d / %2$d</string>
    <string name="crop_score_prev_score_button">이전 악보</string>
    <string name="crop_score_extract_button">추출</string>
    <string name="crop_score_next_score_button">다음 악보</string>
    <string name="crop_score_extract_success">추출을 완료했습니다!</string>

    <string name="load_score_step_3">마지막 단계!</string>
    <string name="load_score_step_3_content">악보 제목, 빠르기를 설정해주세요!</string>
    <string name="score_info_title_guide">악보 제목</string>
    <string name="score_info_title_hint">악보 제목을 입력해주세요.</string>
    <string name="score_save_success">악보 저장을 완료했습니다!</string>
    <string name="score_save_fail_reason_no_title">악보 제목을 입력해주세요.</string>

    <string name="score_storage_title">악보 보관함</string>
    <string name="score_title">악보 이름</string>
    <string name="score_created_date_time">since</string>
</resources>
