<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/piano_1"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/korean_app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/with_piano"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="15dp">
        <TextView
            android:id="@+id/score_storage_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_storage"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/load_store_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_score"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tutorial_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>