<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.withscore.seongwonkong.withscore.view.load_score.LoadScoreActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/load_score_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:titleTextColor="@android:color/white"
        />

    <ScrollView
        android:id="@+id/score_grid_scroll_view"
        android:layout_below="@id/load_score_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/step_1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_score_step_1"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/step_1_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_score_step_1_content"
                android:textSize="14dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                />

            <GridLayout
                android:id="@+id/score_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="horizontal"
                android:alignmentMode="alignBounds"
                >
            </GridLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black">

        <TextView
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/load_score_edit_button"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:gravity="center"/>

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/load_score_next_step"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>
